src/test/deca/context/valid/sansObjet/EmptyElse.deca
{
    boolean x = true;
    if(!x){
        print("Je ne compte pas rentrer ici");
    }else{   
    }
    print("Fin du test");
}