src/test/deca/context/invalid/sansObjet/BadComparaison.deca
{
    int a = 100;
    boolean b = true;
    if (a != b){
        print("a et b sont differents");
    }
}
